# FPROG_war_and_peace

./: CMakeLists.txt  README.md
FPROG_war_and_peace/: CMakeLists.txt  FPROG_war_and_peace.cpp  FPROG_war_and_peace.h
files/: our_output.txt  war_and_peace.txt
files/discord_others/: alan_output.txt  dom_output.txt  nasa_houston_output.txt  old_output.txt
